# FitnessTrackerFullStack

./: .cursorrules  CLAUDE.md
fitness-backend/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
fitness-backend/.claude/: settings.local.json
fitness-backend/alembic/: env.py  script.py.mako
fitness-backend/alembic/versions/: phase2_01_users.py  phase2_02_workouts.py  phase2_03_insights.py  phase2_04_workout_query_indexes.py  phase2_05_integrations.py
fitness-backend/app/: __init__.py  config.py  dependencies.py  main.py
fitness-backend/app/core/: __init__.py  database.py  exceptions.py  logging.py  metrics.py  middleware.py  oauth.py  rate_limit.py  repository.py  security.py  security_headers.py
fitness-backend/app/workers/: __init__.py  settings.py  tasks.py
fitness-backend/documentation/: 2026-05-20-strava-whoop-integration.md  Backend Design Spec.md  CLAUDE.md
fitness-backend/documentation/Plans/: 2026-05-20-fitness-strava-whoop-integration-design.md
fitness-backend/documentation/System Design Docs/: Backend Design Spec - Part 01 Overview Structure Domains.md  Backend Design Spec - Part 02 Database.md  Backend Design Spec - Part 03 API.md  Backend Design Spec - Part 04 Sync and AI.md  Backend Design Spec - Part 05 Operations.md  Backend Design Spec.md
fitness-backend/load-tests/: README.md  common_flows.js
fitness-backend/scripts/: run_migrations.py  seed_db.py
fitness-backend/tests/: conftest.py  factories.py  test_health.py
fitness-backend/tests/integration/: test_activities_router.py  (+6 more)
(+68 files in other folders)
